# lu-sales-api

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.sample  pyproject.toml
alembic/: env.py
alembic/versions/: 132f15b699ed_mensagem_da_migration.py  5c4e3191e6fb_added_new_migrations.py  7d030ac69ca4_added_new_migrations.py  a8330f476a14_added_new_migrations.py  eacca904a765_added_new_migrations.py
app/: main.py
app/api/: deps.py
app/api/v1/: api_router.py
app/api/v1/endpoints/: auth.py  client.py  order.py  product.py
app/core/: config.py  database.py  logging.py  security.py
app/integrations/whatsapp/: whatsapp.py
app/models/: client.py  order.py  product.py  user.py
app/repositories/: user.py
app/schemas/: client.py  order.py  product.py  token.py  user.py
tests/: test_auth.py  test_client.py  test_config.py  test_database.py  test_docs.py  test_order.py  test_order_integration.py  test_product.py  test_schema_client.py  test_schema_order.py  test_schema_product.py  test_schema_user.py  test_security.py
